--- a/index.html
+++ b/index.html
@@ -702,31 +702,31 @@
                     </div>
                 </div>
 
-                <form action="" class="contact__form grid">
+                <form action="https://mailthis.to/bschandu67@gmail.com" method="POST" class="contact__form grid">
                     <div class="contact__inputs grid">
                         <div class="contact__content">
                             <label class="contact__label">Name</label>
-                            <input type="text" class="contact__input">
+                            <input name="name" type="text" class="contact__input">
                         </div>
                         <div class="contact__content">
                             <label class="contact__label">Email</label>
-                            <input type="email" class="contact__input">
+                            <input name="_replyto" type="email" class="contact__input">
                         </div>
                     </div>
                     <div class="contact__content">
                         <label class="contact__label">Project</label>
-                        <input type="text" class="contact__input">
+                        <input name="_subject" type="text" class="contact__input">
                     </div>
                     <div class="contact__content">
                         <label class="contact__label">Message</label>
-                        <textarea name="" id="" cols="0" rows="7" class="contact__input"></textarea>
+                        <textarea name="message" id="" cols="0" rows="7" class="contact__input"></textarea>
                     </div>
 
                     <div>
-                        <a href="#" class="button button--">
+                        <button class="button button--flex" type="submit">
                             Send Message
                             <i class="uil uil-message button__icon"></i>
-                        </a>
+                        </button>
                     </div>
                 </form>
             </div>
