--- a/index.html
+++ b/index.html
@@ -312,6 +312,8 @@
                         </div>
 
                     </div>
+                </div>
+                <div>
                     <!-- MACHINE LEARNING -->
                     <div class="skills__content skills__close">
                         <div class="skills__header">
@@ -406,6 +408,8 @@
                         </div>
 
                     </div>
+                </div>
+                <div>
                     <!-- PROGRAMMING LANGUAGES -->
                     <div class="skills__content skills__close">
                         <div class="skills__header">
