spelling error bachelors ->bachelor

--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@
                         <!-- Qualification 1 -->
                         <div class="qualification__data">
                             <div>
-                                <h3 class="qualification__title">Bachelors of Technology in Computer Science</h3>
+                                <h3 class="qualification__title">Bachelor of Technology in Computer Science</h3>
                                 <span class="qualification__subtitle">International Institute of Information
                                     Technology</span>
                                 <div class="qualification__calendar">
