project field name changed to subject in contact me section

--- a/index.html
+++ b/index.html
@@ -718,7 +718,7 @@
                         </div>
                     </div>
                     <div class="contact__content">
-                        <label class="contact__label">Project</label>
+                        <label class="contact__label">Subject</label>
                         <input name="_subject" type="text" class="contact__input">
                     </div>
                     <div class="contact__content">
